--- a/login_app/templates/page-login.html
+++ b/login_app/templates/page-login.html
@@ -57,7 +57,7 @@
         {% endif %}
                     {% if user.is_authenticated %}
                         <p>Welcome {{ user.username }} !!!</p> 
-                        <a href="#" onclick="TwLogin_or_add_account('/add_account/')"" class="btn btn-warning">Connect Twitter</a>   
+                        <a href="#" onclick="TwLogin_or_add_account('/twitter/add_account')"" class="btn btn-warning">Connect Twitter</a>   
                         <br>
                         <br>
                         <a href="#" onclick="TwLogin_or_add_account('/add_account/')"" class="btn btn-warning">Connect Facebook Profile</a>  
@@ -73,7 +73,7 @@
                     
                     
                      
-                    <a href="#" onclick="TwLogin_or_add_account('/twitter_login/')">Twitter Login</a>
+                    <a href="#" onclick="TwLogin_or_add_account('/twitter/twitter_login/')">Twitter Login</a>
                     <div class="form-group">
                         <input type="text" class="form-control" placeholder="E-Mail or Phone">
                     </div>
